--- a/index.html
+++ b/index.html
@@ -7,3 +7,7 @@
 <body>
 <button type="button" name="button" id="start">start</button>
 <button type="button" name="button" id="stop">stop</button>
+
+
+<button type="button" name="button" id="start1">start</button>
+<button type="button" name="button" id="stop1">stop</button>
