--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ div.gallery {
   margin: 5px;
   border: 1px solid #ccc;
 /*float: left;*/
-  width: 140px;
+  width: 160px;
 }
 
 div.gallery:hover {
@@ -53,20 +53,23 @@ div.gallery:hover {
 
 div.gallery img {
   width: 100%;
-  height: 30%;
+  height:180px;
 }
 
 div.desc {
-  padding: 15px;
+  padding: 10%;
   text-align: center;
-    background-color:gray; color:white;
+    background-color:lightgray; color:white;
 }
 
 
 button{
-  color: black;
-  border-radius: 5px;
+background-color:black;
+  color: white;
+border:none;
+  border-radius: 50%;
 width:40%;
+font-size:24px;
 }
 
 
@@ -100,8 +103,8 @@ width:40%;
      <img src="e.jpeg" alt="Cinque Terre" width="600" height="400">
 
       <div class="desc">
-        <button  type="button" name="button" id="start"><i class="fas fa-play"></i>.</button>
-      <button  type="button" name="button" id="stop"><i class="fas fa-stop"></i>.</button></div>
+        <button  type="button" name="button" id="start">&nbsp<i class="fas fa-play"></i>&nbsp</button>
+      <button  type="button" name="button" id="stop">&nbsp<i class="fas fa-stop"></i>&nbsp</button></div>
   </div>
 
 
@@ -110,8 +113,8 @@ width:40%;
      <img src="u.jpeg" alt="Cinque Terre" width="600" height="400">
 
       <div class="desc">
-        <button type="button" name="button" id="start1"><i class="fas fa-play"></i>.</button>
-        <button type="button" name="button" id="stop1"><i class="fas fa-stop"></i>.</button></div>
+        <button type="button" name="button" id="start1">&nbsp<i class="fas fa-play"></i>&nbsp</button>
+        <button type="button" name="button" id="stop1">&nbsp<i class="fas fa-stop"></i>&nbsp</button></div>
   </div>
 
 
@@ -119,8 +122,8 @@ width:40%;
      <img src="d.jpeg" alt="Cinque Terre" width="600" height="400">
 
       <div class="desc">
-        <button type="button" name="button" id="start2"><i class="fas fa-play"></i>.</button>
-      <button type="button" name="button" id="stop2"><i class="fas fa-stop"></i>.</button></div>
+        <button type="button" name="button" id="start2">&nbsp<i class="fas fa-play"></i>&nbsp</button>
+      <button type="button" name="button" id="stop2">&nbsp<i class="fas fa-stop"></i>&nbsp</buton></div>
   </div>
 
 
@@ -128,8 +131,8 @@ width:40%;
      <img src="a.jpg" alt="Cinque Terre" width="600" height="400">
 
       <div class="desc">
-        <button type="button" name="button" id="start3"><i class="fas fa-play"></i>.</button>
-      <button type="button" name="button" id="stop3"><i class="fas fa-stop"></i>.</button></div>
+        <button type="button" name="button" id="start3">&nbsp<i class="fas fa-play"></i>&nbsp</button>
+      <button type="button" name="button" id="stop3">&nbsp<i class="fas fa-stop"></i>&nbsp</button></div>
   </div>
 
 
@@ -146,24 +149,24 @@ width:40%;
 <div class="gallery">
   <img src="q.jpg" alt="Cinque Terre" width="600" height="400">
 
-    <div class="desc"><button type="button" name="button" id="start4">play</button>
-    <button type="button" name="button" id="stop4">stop</button></div>
+    <div class="desc"><button type="button" name="button" id="start4">&nbsp<i class="fas fa-play"></i>&nbsp</button>
+    <button type="button" name="button" id="stop4">&nbsp<i class="fas fa-stop"></i>&nbsp</button></div>
 </div>
 
 
 <div class="gallery">
    <img src="c.jpeg" alt="Cinque Terre" width="600" height="400">
 
-    <div class="desc"><button type="button" name="button" id="start5">play</button>
-      <button type="button" name="button" id="stop5">stop</button></div>
+    <div class="desc"><button type="button" name="button" id="start5">&nbsp<i class="fas fa-play"></i>&nbsp</button>
+      <button type="button" name="button" id="stop5">&nbsp<i class="fas fa-stop"></i>&nbsp</button></div>
 </div>
 
 
 <div class="gallery">
    <img src="w.jpg" alt="Cinque Terre" width="600" height="400">
 
-    <div class="desc"><button type="button" name="button" id="start6">play</button>
-    <button type="button" name="button" id="stop6">stop</button></div>
+    <div class="desc"><button type="button" name="button" id="start6">&nbsp<i class="fas fa-play"></i>&nbsp</button>
+    <button type="button" name="button" id="stop6">&nbsp<i class="fas fa-stop"></i>&nbsp</button></div>
 </div>
 
 
@@ -171,8 +174,8 @@ width:40%;
 <div class="gallery">
    <img src="r.jpg" alt="Cinque Terre" width="600" height="400">
 
-    <div class="desc"><button type="button" name="button" id="start7">play</button>
-    <button type="button" name="button" id="stop7">stop</button></div>
+    <div class="desc"><button type="button" name="button" id="start7">&nbsp<i class="fas fa-play"></i>&nbsp</button>
+    <button type="button" name="button" id="stop7">&nbsp<i class="fas fa-stop"></i>&nbsp</button></div>
 </div>
 
 
@@ -191,24 +194,24 @@ width:40%;
 <div class="gallery">
   <img src="t.jpg" alt="Cinque Terre" width="600" height="400">
 
-    <div class="desc"><button type="button" name="button" id="start8">play</button>
-    <button type="button" name="button" id="stop8">stop</button></div>
+    <div class="desc"><button type="button" name="button" id="start8">&nbsp<i class="fas fa-play"></i>&nbsp</button>
+    <button type="button" name="button" id="stop8">&nbsp<i class="fas fa-stop"></i>&nbsp</button></div>
 </div>
 
 
 <div class="gallery">
    <img src="y.jpg" alt="Cinque Terre" width="600" height="400">
 
-    <div class="desc"><button type="button" name="button" id="start9">play</button>
-      <button type="button" name="button" id="stop9">stop</button></div>
+    <div class="desc"><button type="button" name="button" id="start9">&nbsp<i class="fas fa-play"></i>&nbsp</button>
+      <button type="button" name="button" id="stop9">&nbsp<i class="fas fa-stop"></i>&nbsp</button></div>
 </div>
 
 
 <div class="gallery">
    <img src="i.jpg" alt="Cinque Terre" width="600" height="400">
 
-    <div class="desc"><button type="button" name="button" id="start10">play</button>
-    <button type="button" name="button" id="stop10">stop</button></div>
+    <div class="desc"><button type="button" name="button" id="start10">&nbsp<i class="fas fa-play"></i>&nbsp</button>
+    <button type="button" name="button" id="stop10">&nbsp<i class="fas fa-stop"></i>&nbsp</button></div>
 </div>
 
 
@@ -216,8 +219,8 @@ width:40%;
 <div class="gallery">
    <img src="o.jpg" alt="Cinque Terre" width="600" height="400">
 
-    <div class="desc"><button type="button" name="button" id="start11">play</button>
-    <button type="button" name="button" id="stop11">stop</button></div>
+    <div class="desc"><button type="button" name="button" id="start11">&nbsp<i class="fas fa-play"></i>&nbsp</button>
+    <button type="button" name="button" id="stop11">&nbsp<i class="fas fa-stop"></i>&nbsp</button></div>
 </div>
 
 
